# chronophoto

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TASK.md
.github/workflows/: ci.yml  release.yml
src/: discovery.rs  exif_extractor.rs  lib.rs  main.rs  metadata.rs  mover.rs  organizer.rs  path_builder.rs  processor.rs  setup.rs  transfer.rs  types.rs
tests/: integration_test.rs
tests/fixtures/: photo_no_extension
