[package]
name = "chronophoto"
version = "0.2.0"
edition = "2024"
authors = ["Dmytro Dordovskyi <dordovskydmitry@gmail.com>"]
description = "A CLI tool to organize photos based on EXIF timestamp data"
repository = "https://github.com/DmytroDordovskyi/chronophoto"
license = "MIT OR Apache-2.0"
keywords = ["photos", "exif", "organize", "cli", "timestamp"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
indicatif = "0.18.3"
kamadak-exif = "0.6.1"
log = "0.4.29"
walkdir = "2"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
strip = true
